# mini-zephyr

./: CMakeLists.txt  Kconfig  prj.conf
dts/: mini.dts
dts/bindings/: base.yaml  i2c-device.yaml  myvendor,i2c-controller.yaml  myvendor,sensor.yaml
example-build-output/: Kconfig.dts  README.md  dts.cmake  edt.pickle  mini_out.dts  sources.txt
include/: devicetree.h
src/: demo_i2c_app.c  main.c
